# ITMO-works

./: README.md
Automatic text processing/3 Classification of texts/: lesson3.ipynb
Introduction to Machine Learning/1 Introduction/: Introduction.ipynb
Introduction to Machine Learning/2 Regression/: LinearRegression.ipynb  LinearRegression2.ipynb
Introduction to Machine Learning/3 Logistic regression/: LogisticRegression.ipynb
Introduction to Machine Learning/4 Classifiers/: data.csv  k-NN.ipynb
Introduction to Machine Learning/5 Clustering/: K-Means.ipynb
Introduction to Machine Learning/Final task/: LogisticRegression.ipynb  k-NN.ipynb
Machine vision/1 Computer vision/: lesson 1.ipynb
Machine-learning-Autumn-2021/: 1 acquaintance.ipynb  2 task.ipynb  pyproject.toml
