[tool.poetry]
name = "machine-learning-autumn-2021"
version = "0.1.0"
description = ""
authors = ["barannikovMU <barannikov.mu@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.22.0"
pandas = "^1.3.5"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
ipykernel = "^6.6.1"
statsmodels = "^0.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
